changed the name

--- a/index.html
+++ b/index.html
@@ -1,97 +1,119 @@
-
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Amazon Marble Centre | The Peak of Luxury Stone</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            colors: {
-              'marble-white': '#FAF9F6',
-              'marble-gray': '#E8E6E1',
-              'charcoal': '#121212',
-              'regal-gold': '#C5A059',
-              'royal-accent': '#9B7E46',
-              'champagne': '#E0D8C3'
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>JS Tiles Emporium | The Peak of Luxury Stone</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Inter:wght@300;400;500;600;700&display=swap"
+    rel="stylesheet">
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            'marble-white': '#FAF9F6',
+            'marble-gray': '#E8E6E1',
+            'charcoal': '#121212',
+            'regal-gold': '#C5A059',
+            'royal-accent': '#9B7E46',
+            'champagne': '#E0D8C3'
+          },
+          fontFamily: {
+            serif: ['"Bodoni Moda"', 'serif'],
+            sans: ['Inter', 'sans-serif'],
+          },
+          animation: {
+            'slow-zoom': 'zoom 15s infinite alternate ease-in-out',
+            'scroll-down': 'scroll 2s infinite ease-in-out',
+            'pulse-soft': 'pulse 3s infinite',
+          },
+          keyframes: {
+            zoom: {
+              '0%': { transform: 'scale(1)' },
+              '100%': { transform: 'scale(1.03)' },
             },
-            fontFamily: {
-              serif: ['"Bodoni Moda"', 'serif'],
-              sans: ['Inter', 'sans-serif'],
-            },
-            animation: {
-              'slow-zoom': 'zoom 15s infinite alternate ease-in-out',
-              'scroll-down': 'scroll 2s infinite ease-in-out',
-              'pulse-soft': 'pulse 3s infinite',
-            },
-            keyframes: {
-              zoom: {
-                '0%': { transform: 'scale(1)' },
-                '100%': { transform: 'scale(1.03)' },
-              },
-              scroll: {
-                '0%': { transform: 'translateY(-100%)' },
-                '100%': { transform: 'translateY(100%)' },
-              }
+            scroll: {
+              '0%': { transform: 'translateY(-100%)' },
+              '100%': { transform: 'translateY(100%)' },
             }
           }
         }
       }
-    </script>
-    <style>
-      body {
-        background-color: #FAF9F6;
-        color: #121212;
-        -webkit-font-smoothing: antialiased;
-        scroll-behavior: smooth;
-        overflow-x: hidden;
-      }
-      .fade-in {
-        animation: fadeIn 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94) forwards;
+    }
+  </script>
+  <style>
+    body {
+      background-color: #FAF9F6;
+      color: #121212;
+      -webkit-font-smoothing: antialiased;
+      scroll-behavior: smooth;
+      overflow-x: hidden;
+    }
+
+    .fade-in {
+      animation: fadeIn 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94) forwards;
+      opacity: 0;
+    }
+
+    @keyframes fadeIn {
+      from {
         opacity: 0;
+        transform: translateY(10px);
       }
-      @keyframes fadeIn {
-        from { opacity: 0; transform: translateY(10px); }
-        to { opacity: 1; transform: translateY(0); }
-      }
-      .text-gold-gradient {
-        background: linear-gradient(to right, #C5A059, #F1D299, #C5A059);
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-        background-size: 200% auto;
-        animation: shine 4s linear infinite;
-      }
-      @keyframes shine {
-        to { background-position: 200% center; }
-      }
-      img {
-        opacity: 0;
-        transition: opacity 0.3s ease-out;
-      }
-      img.loaded {
+
+      to {
         opacity: 1;
+        transform: translateY(0);
       }
-      ::selection {
-        background: #C5A059;
-        color: white;
+    }
+
+    .text-gold-gradient {
+      background: linear-gradient(to right, #C5A059, #F1D299, #C5A059);
+      background-clip: text;
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-size: 200% auto;
+      animation: shine 4s linear infinite;
+    }
+
+    @keyframes shine {
+      to {
+        background-position: 200% center;
       }
-      ::-webkit-scrollbar {
-        width: 5px;
-      }
-      ::-webkit-scrollbar-track {
-        background: #F8F8F8;
-      }
-      ::-webkit-scrollbar-thumb {
-        background: #C5A059;
-      }
-    </style>
-    <script type="importmap">
+    }
+
+    img {
+      opacity: 0;
+      transition: opacity 0.3s ease-out;
+    }
+
+    img.loaded {
+      opacity: 1;
+    }
+
+    ::selection {
+      background: #C5A059;
+      color: white;
+    }
+
+    ::-webkit-scrollbar {
+      width: 5px;
+    }
+
+    ::-webkit-scrollbar-track {
+      background: #F8F8F8;
+    }
+
+    ::-webkit-scrollbar-thumb {
+      background: #C5A059;
+    }
+  </style>
+  <script type="importmap">
     {
       "imports": {
         "react/": "https://esm.sh/react@^19.2.4/",
@@ -102,15 +124,17 @@
     </script>
   <link rel="stylesheet" href="/index.css">
 </head>
-  <body>
-    <div id="root"></div>
-    <script>
-      document.addEventListener('load', (e) => {
-        if (e.target.tagName === 'IMG') {
-          e.target.classList.add('loaded');
-        }
-      }, true);
-    </script>
+
+<body>
+  <div id="root"></div>
+  <script>
+    document.addEventListener('load', (e) => {
+      if (e.target.tagName === 'IMG') {
+        e.target.classList.add('loaded');
+      }
+    }, true);
+  </script>
   <script type="module" src="/index.tsx"></script>
 </body>
+
 </html>
